buf fixed on gird

--- a/frontend/src/components/Friends/friends.css
+++ b/frontend/src/components/Friends/friends.css
@@ -15,13 +15,17 @@
 	display: flex;
 
 	overflow-y: auto;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(192px, 1fr));
+	gap: var(--spacing-medium);
+	width: 100%;
 }
 
 .friend-card-container {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(192px, 1fr));
 	gap: var(--spacing-medium);
-	width: 100%;	
+	width: 100%;
 }
 
 .friend-card-container-parent::-webkit-scrollbar {
